Search API 1.0, dev (xx/xx/xxxx):
---------------------------------
API changes:
- #1291346 by drunken monkey: Expose SearchApiQuery::preExecute() and
  postExecute().
- #955088 by dereine, drunken monkey: Provide (additional) access functionality.
- #1064884 by drunken monkey: Added support for indexing non-entities.

Others:
- #1294828 by drunken monkey: Fixed accidental presence of good OOP coding
  standards in Views integration.
- #1291376 by drunken monkey: Expose
  SearchApiFacetapiAdapter::getCurrentSearch().
- #1198764 by morningtime, drunken monkey: Fixed handling of Views filter
  groups.
- #1286500 by drunken monkey: Fixed „Search IDs” setting for facets not saved.
- #1278780 by dereine, drunken monkey: Fixed status field requirement for node
  access.
- #1182614 by katbailey, cpliakas, drunken monkey, thegreat, das-peter: Added
  Facet API integration.
- #1278592 by das-peter: Fixed default view mode for non-entites or entities
  without view modes.
- #1251674 by Nick_vh: Fixed handling of empty fulltext keys in Views.
- #1145306 by Nick_vh, drunken monkey: Fixed handling of multiple filters in the
  database service class.
- #1264164 by das-peter: Fixed the definition of the external data source
  controller's trackItemChange() method.
- #1262362 by drunken monkey: Fixed error handling for orphaned facets.
- #1233426 by atlea: Fixed dirty and queued items don't get removed from the
  tracking table when deleted.
- #1258240 by drunken monkey: Fixed more overlooked entity type assumptions.
- #1213698 by drunken monkey: Added a data alteration for indexing complete
  hierarchies.
- #1252208 by tedfordgif: Fixed superfluous query chars in active facet links.
- #1224564 by drunken monkey: Added user language as a filter in Views.
- #1242614 by jsacksick: Fixed division by zero in drush_search_api_status().
- #1250168 by drunken monkey: Fixed deleted items aren't removed from servers.
- #1236642 by jsacksick, drunken monkey: Fixed stale static cache of