@@ -7,6 +7,7 @@ API changes:
 - #1064884 by drunken monkey: Added support for indexing non-entities.
 
 Others:
+- #1295144 by katbailey: Added alter hook for Facet API search keys.
 - #1294828 by drunken monkey: Fixed accidental presence of good OOP coding
   standards in Views integration.
 - #1291376 by drunken monkey: Expose
